fixed bug that removed the scrollbars

--- a/sass/px-context-browser-sketch.scss
+++ b/sass/px-context-browser-sketch.scss
@@ -66,7 +66,7 @@ $column-width: calculateRem(240px);
   &.column-index-#{$columns} {
     .column {
       &:nth-child(-n + #{$columns}) {
-        //margin-left: -$column-width;
+        margin-left: -$column-width;
         width: $column-width;
         overflow: hidden;
 
@@ -235,6 +235,10 @@ header {
     align-items: center;
     width: 100%;
     height: 100%;
+}
+
+.content-wrapper__item{
+  margin-bottom: $inuit-base-spacing-unit - calculateRem(1px);
 }
 
 px-spinner {
